--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
             <nav class="navbar" role="navigation">
                 <a href="#" class="brand">Mi página web</a>
                 <ul class="nav-links">
-                    <li><a href="mi-primer-website.html">Casita</a></li>
+                    <li><a href="index.html">Casita</a></li>
                     <li><a href="about.html">Info</a></li>   
                     <li><a href="services.html">Servicios</a></li>
                     <li><a href="contact.html">Contacto</a></li>
